--- a/table/makefile
+++ b/table/makefile
@@ -19,7 +19,7 @@ CFLAGS = -c -g  -Wall -ansi -O2
 # MODIFIED in example 12: keyword.o
 # MODIFIED in example 13: builtin.o builtinParameter1.o mathFunction.o
 # MODIFIED in example 14: builtinParameter0.o builtinParameter2.o 
-OBJECTS= table.o symbol.o variable.o numericVariable.o \
+OBJECTS= table.o symbol.o variable.o numericVariable.o stringVariable.o \
 		init.o \
 		constant.o numericConstant.o \
 		keyword.o \
